# system-disk-info-collector

./: Cargo.toml  LICENSE  README.md
src/: cpu_info.rs  disk_info.rs  drive.rs  drive_model.rs  drive_name.rs  drive_serial_number.rs  drive_size.rs  lib.rs  main.rs  sanitize_data.rs  system_diskinfo.rs
src/cpu_info/: name.rs  number_of_cores.rs  processor_id.rs
src/disk_info/: model.rs  name.rs  serial_number.rs  size.rs
src/drive/: drive_model.rs
src/system_diskinfo/: drive_model.rs  drive_name.rs  drive_serial_number.rs  drive_size.rs
